--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ python:
     - "3.6"
 
 install:
-  - pip install --upgrade algoliasearch
+  - pip install --upgrade algoliasearch jsonschema
 
 script:
+  - python test-records.py
+
+after_success:
   - python deploy-algolia.py
