Added media category

--- a/data/apple.json
+++ b/data/apple.json
@@ -2,6 +2,7 @@
     "slug": "apple",
     "categories": [
         "commerce",
+        "media",
         "social media"
     ],
     "name": "Apple Distribution International",
