Renamed 'media' category to 'entertainment'

--- a/data/apple.json
+++ b/data/apple.json
@@ -2,7 +2,7 @@
     "slug": "apple",
     "categories": [
         "commerce",
-        "media",
+        "entertainment",
         "social media"
     ],
     "name": "Apple Distribution International",
