Fixed Cloudapp email

--- a/data/cloudapp.json
+++ b/data/cloudapp.json
@@ -8,7 +8,7 @@
         "CloudApp (www.getcloudapp.com)"
     ],
     "address": "PO Box 29502 #96560\nLas Vegas\nNV 89126-9502\nUnited States of America",
-    "email": "privacy@getcloudapp.com",
+    "email": "acc-cloudapp@benni.pw",
     "web": "https://www.getcloudapp.com/",
     "sources": [
         "https://www.getcloudapp.com/privacy",
