Add Apple to telecom

--- a/companies/apple.json
+++ b/companies/apple.json
@@ -3,7 +3,8 @@
     "categories": [
         "commerce",
         "entertainment",
-        "social media"
+        "social media",
+        "telecommunication"
     ],
     "name": "Apple Distribution International",
     "address": "Hollyhill Industrial Estate\nHollyhill, Cork\nRepublic of Ireland",
