--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-    - "3.6"
+  - '3.6'
 
 install:
   - pip install --upgrade typesense jsonschema
@@ -8,5 +8,13 @@ install:
 script:
   - python test-records.py
 
-after_success:
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then python deploy-typesense.py; fi'
+deploy:
+  - provider: script
+    script: 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then python deploy-typesense.py; fi'
+    on:
+      branch: master
+  # deploy non-master commits to a staging env, we may want to implement that in the future
+  # - provider: script
+  #   script: python deploy-typesense.py
+  #   on:
+  #     branch: develop
