--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
         - run: sudo pip install pipenv
 
         # Cache, see: https://circleci.com/docs/2.0/language-python/#cache-dependencies
-        - run: sudo chown -R circleci:circleci /usr/local/bin
-        - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+        - run: 'sudo chown -R circleci:circleci /usr/local/bin  || :'
+        - run: 'sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages || :'
         - restore_cache:
             key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
 
