--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,20 @@ version: 2.1
 jobs:
   build:
       docker:
-        - image: circleci/python:3.7-buster
+        - image: circleci/node:12-buster
       steps:
         - checkout
 
-        - run: sudo pip install pipenv
-
-        # Cache, see: https://circleci.com/docs/2.0/language-python/#cache-dependencies
-        - run: 'sudo chown -R circleci:circleci /usr/local/bin  || :'
-        - run: 'sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages || :'
+        # Cache, see: https://circleci.com/docs/2.0/language-javascript/#sample-configuration
         - restore_cache:
-            key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+            key: dependency-cache-{{ .Branch }}-{{ checksum "yarn.lock" }}
 
         - run:
             command: |
-              pipenv install
-              python test-records.py
+              yarn
+              yarn test
 
         - save_cache:
-            key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+            key: dependency-cache-{{ .Branch }}-{{ checksum "yarn.lock" }}
             paths:
-              - ".venv"
-              - "/usr/local/bin"
-              - "/usr/local/lib/python3.6/site-packages"
+              - ./node_modules
