Make sure all records with required elements have a 'name' field
This is actually a requirement (see
https://github.com/datenanfragen/data#required-elements).
This commit is in preparation for the coming CI check (see #388, 482).

--- a/companies/whatsapp.json
+++ b/companies/whatsapp.json
@@ -18,6 +18,11 @@
     ],
     "required-elements": [
         {
+            "desc": "Name",
+            "type": "name",
+            "optional": false
+        },
+        {
             "desc": "WhatsApp phone number",
             "type": "input"
         }
