Fix Travis deploy script
It tried to access the non-existent Python test script and
failed silently.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install --upgrade typesense jsonschema
 
 script:
-  - python test-records.py
+  - echo "Nothing to be done."
 
 deploy:
   - provider: script
