--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom
+todo
+.envrc
+
 # macOS
 
 ## General
@@ -230,7 +234,3 @@ tmp/
 temp/
 
 # End of https://www.gitignore.io/api/node
-
-
-# Custom
-todo
