--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,11 @@ jobs:
 
       - run:
           command: |
+            # Trigger a CircleCI build of datenanfragen/website. We are starting this first, so it can run in parallel
+            # with the Typesense deploy.
+            curl --fail -X POST https://circleci.com/api/v1.1/project/github/datenanfragen/website/build -H "Circle-Token: ${PERSONAL_CIRCLE_TOKEN}"
+
+            # Do the actual Typesense deploy.
             yarn
             yarn deploy
 
