--- a/companies/eastbankclub.json
+++ b/companies/eastbankclub.json
@@ -10,7 +10,7 @@
     "runs": [
         "SUPERFIT"
     ],
-    "address": "Postfach 410108\n12111 Berlin",
+    "address": "Postfach 410108\n12111 Berlin\nDeutschland",
     "phone": "+49 30 688381768",
     "fax": "+49 30 688381750",
     "email": "member@superfit.club",
