Changed quality to verified

--- a/companies/eastbankclub.json
+++ b/companies/eastbankclub.json
@@ -20,5 +20,5 @@
         "https://superfit.club/impressum/"
     ],
     "suggested-transport-medium": "email",
-    "quality": "tested"
+    "quality": "verified"
 }
