--- a/companies/intelligent-apps.json
+++ b/companies/intelligent-apps.json
@@ -41,7 +41,7 @@
         },
         {
             "desc": "Email",
-            "type": "input"
+            "type": "email"
         }
     ],
     "quality": "verified"
