--- a/companies/luca-app.json
+++ b/companies/luca-app.json
@@ -7,9 +7,9 @@
         "health",
         "commerce"
     ],
-    "name": " culture4life GmbH",
+    "name": "culture4life GmbH",
     "runs": [
-        "luca"
+        "Kontakttagebuch luca"
     ],
     "address": "Charlottenstraße 59\n10117 Berlin\nDeutschland",
     "phone": "+49 30 22183850",
