Adding new companies

--- a/companies/cloudapp.json
+++ b/companies/cloudapp.json
@@ -7,7 +7,7 @@
     "runs": [
         "CloudApp (www.getcloudapp.com)"
     ],
-    "address": "PO Box 29502 #96560\nLas Vegas\nNV 89126-9502\nUnited States of America",
+    "address": "548 Market St. #35577\nSan Francisco CA 94104\nUnited States of America",
     "email": "privacy@getcloudapp.com",
     "web": "https://www.getcloudapp.com/",
     "sources": [
