--- a/companies/app-fahrschulcard.json
+++ b/companies/app-fahrschulcard.json
@@ -4,7 +4,12 @@
         "de"
     ],
     "name": "Deutscher Fahrschulverlag GmbH",
+    "runs": [
+        "Fahrschulcard (App)"
+    ],
     "address": "Luise-Ullrich-Straße 8\n82031 Grünwald\nDeutschland",
+    "phone": "+49 89 242399055",
+    "fax": "+49 89 242399080",
     "email": "datenschutz@d-fv.de",
     "web": "https://app.fahrschulcard.de/",
     "sources": [
