--- a/companies/cloudapp.json
+++ b/companies/cloudapp.json
@@ -7,14 +7,21 @@
     "runs": [
         "CloudApp (www.getcloudapp.com)"
     ],
-    "address": "PO Box 29502 #96560\nLas Vegas\nNV 89126-9502\nUnited States of America",
-    "email": "privacy@getcloudapp.com",
+    "address": "431 Tehama St\nSan Francisco CA 94103\nUnited States of America",
+    "email": "compliance@getcloudapp.com",
     "web": "https://www.getcloudapp.com/",
     "sources": [
         "https://www.getcloudapp.com/privacy",
-        "https://www.getcloudapp.com/terms"
+        "https://www.getcloudapp.com/cloudapp-privacy-policy-gdpr-updates"
     ],
     "request-language": "en",
     "suggested-transport-medium": "email",
+    "required-elements": [
+        {
+            "desc": "Email",
+            "type": "name",
+            "optional": false
+        }
+    ],
     "quality": "verified"
 }
