--- a/companies/whatsapp.json
+++ b/companies/whatsapp.json
@@ -1,32 +1,35 @@
 {
     "slug": "whatsapp",
     "relevant-countries": [
-        "all"
+        "ie"
     ],
     "categories": [
-        "social media"
+        "travel"
     ],
     "name": "WhatsApp Ireland Ltd.",
     "runs": [
         "WhatsApp Inc."
     ],
     "address": "4 Grand Canal Square\nGrand Canal Harbour\nDublin 2\nIreland",
+    "phone": "0547468336",
+    "fax": "0000000",
     "email": "dpo-inquiries@support.whatsapp.com",
     "web": "https://www.whatsapp.com/",
     "sources": [
-        "https://www.whatsapp.com/legal/#privacy-policy"
+        "https://www.whatsapp.com/legal/#privacy-policy",
+        "https://github.com/datenanfragen/data/pull/1095"
     ],
     "required-elements": [
         {
             "desc": "Name",
-            "type": "name",
-            "optional": false
+            "type": "name"
         },
         {
             "desc": "WhatsApp phone number",
             "type": "input"
         }
     ],
+    "needs-id-document": true,
     "suggested-transport-medium": "email",
     "quality": "verified"
 }
