--- a/companies/intelligent-apps.json
+++ b/companies/intelligent-apps.json
@@ -19,13 +19,14 @@
         "myTaxi",
         "FREE NOW"
     ],
-    "address": "Große Elbstraße 273\n22767 Hamburg\nDeutschland",
-    "phone": "+49 40 30606890",
-    "email": "kundenservice@free-now.com",
+    "address": "Neumühlen 19\n22763 Hamburg\nDeutschland",
+    "phone": "+49 40 401198586",
+    "fax": "+49 40 401198586",
+    "email": "impressum@free-now.com",
     "web": "https://free-now.com",
     "sources": [
-        "https://free-now.com/de/impressum/",
-        "https://free-now.com/de/agb-datenschutz-cookies/",
+        "https://free-now.com/de/impressum",
+        "https://free-now.com/de/passenger-privacy-policy",
         "https://github.com/datenanfragen/data/issues/344",
         "https://www.crunchbase.com/organization/intelligent-apps-mytaxi",
         "https://free-now.com/de/fahrgast/europa/"
