Fix records: Whitespace, country names, suggested-transport-medium email

--- a/companies/apple.json
+++ b/companies/apple.json
@@ -7,7 +7,7 @@
         "telecommunication"
     ],
     "name": "Apple Distribution International",
-    "address": "Hollyhill Industrial Estate\nHollyhill, Cork\nRepublic of Ireland",
+    "address": "Hollyhill Industrial Estate\nHollyhill, Cork\nIreland",
     "email": "contactus.de@euro.apple.com",
     "web": "https://www.apple.com",
     "sources": [
