--- a/companies/untappd.json
+++ b/companies/untappd.json
@@ -13,7 +13,7 @@
         "Untappd for Business",
         "Untappd Store"
     ],
-    "address": "21 S Front St\nWilmington, NC\nUSA",
+    "address": "21 S Front St\nWilmington, NC\nUnited States of America",
     "email": "privacy@nextglass.co",
     "web": "https://untappd.com",
     "sources": [
