--- a/companies/blk-app.json
+++ b/companies/blk-app.json
@@ -7,7 +7,7 @@
         "social media"
     ],
     "name": "BLK",
-    "address": "c/o Affinity Apps, LLC\n8750 N. Central Expressway\nSuite 1400\nDallas TX 75231\nUnited States",
+    "address": "c/o Affinity Apps, LLC\n8750 N. Central Expressway\nSuite 1400\nDallas TX 75231\nUnited States of America",
     "email": "privacy@support.blk-app.com",
     "web": "https://www.blk-app.com",
     "sources": [
