Refactor `test-records.js` and add new tests.
New tests:
* address formatting
  * trim lines
  * ensure that "\n" is used to separate lines
  * ensure that the last line is a country
  * ensure that it doesn't contain the `name` again
* ensure that root-level strings are trimmed
* (check if suggested-transport-medium is set correctly for privacy-related emails)
  * currently disabled, as it shouldn't be a hard fail

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "chunk": "^0.0.2",
         "glob": "^7.1.6",
         "husky": "^3.1.0",
-        "typesense": "^0.6.1"
+        "typesense": "^0.6.1",
+        "countries-list": "^2.6.1"
     },
     "scripts": {
         "test": "node test-records.js",
