--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "chunk": "^0.0.2",
         "countries-list": "^2.6.1",
         "eslint": "^7.32.0",
+        "eslint-plugin-optimize-regex": "^1.2.1",
         "glob": "^7.1.6",
         "husky": "^3.1.0",
         "lint-staged": "^11.1.2",
