--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "husky": "^3.1.0",
         "lint-staged": "^11.1.2",
         "prettier": "^2.3.2",
+        "all-the-cities": "^3.1.0",
         "typesense": "^0.6.1"
     },
     "scripts": {
