--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
         - run:
             command: |
               yarn
+              yarn eslint --ext .json --ext .js .
               yarn test
 
         - save_cache:
