--- a/.github/config.yml
+++ b/.github/config.yml
@@ -4,4 +4,4 @@ newPRWelcomeComment: |
   We are glad about every contribution!
 
 firstPRMergeComment: |
-  Congrats on your first merge! Thank you for helping us to keep the database up to date.
+  Congrats on your first merge! Thank you for helping us keep this repository updated.
