--- a/companies/openx.json
+++ b/companies/openx.json
@@ -11,7 +11,7 @@
         "OpenX Technologies, Inc.",
         "OpenX Japan Kabushiki Kaisha"
     ],
-    "address": "Aleja 29 Listopada 20\31-401 Krakow\nPoland",
+    "address": "Aleja 29 Listopada 20\n31-401 Krakow\nPoland",
     "phone": "+1 626 466 1141",
     "email": "privacy@openx.com",
     "web": "https://www.openx.com/",
