Introduce 'phone' field in the company schema

--- a/companies/apple.json
+++ b/companies/apple.json
@@ -9,6 +9,7 @@
     "name": "Apple Distribution International",
     "address": "Hollyhill Industrial Estate\nHollyhill, Cork\nIreland",
     "email": "contactus.de@euro.apple.com",
+    "phone": "+353 21 428 4000",
     "web": "https://www.apple.com",
     "sources": [
         "https://www.apple.com/legal/privacy/de-ww/",
