--- a/companies/apple.json
+++ b/companies/apple.json
@@ -9,12 +9,16 @@
     "name": "Apple Distribution International",
     "address": "Hollyhill Industrial Estate\nHollyhill, Cork\nIreland",
     "email": "contactus.de@euro.apple.com",
-    "phone": "+353 21 428 4000",
+    "phone": [
+        "1800 92 38 98",
+        "800 692 7753"
+    ],
     "web": "https://www.apple.com",
     "sources": [
         "https://www.apple.com/legal/privacy/de-ww/",
         "https://www.apple.com/de/contact/",
-        "https://britainfirm.com/ireland/apple-distribution-international-542875"
+        "https://www.apple.com/ie/contact/",
+        "https://www.apple.com/contact/"
     ],
     "relevant-countries": [
         "all"
