--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "lib": ["esnext"],
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "noEmit": true
     },
     "include": ["src/**/*.ts"]
 }
