--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "engines": {
+        "node": ">=14.0.0",
+    },
     "devDependencies": {
         "@babel/runtime": "^7.11.0",
         "@types/all-the-cities": "^3.1.0",
