--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "engines": {
-        "node": ">=14.0.0",
+        "node": ">=14.0.0"
     },
     "devDependencies": {
         "@babel/runtime": "^7.11.0",
