--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
         - run: yarn ts-node src/test-records.ts --autofix
         # https://github.com/reviewdog/reviewdog#diff
         - run: F=${mktemp} 
-        - run: echo "oh no: I${F}I"
+        - run: echo "oh no I${F}I"
         - run: git diff > "${F}"
         - run: git stash -u
         - run: git stash drop
