--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,6 @@ fabric.properties
 
 env
 
-
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
@@ -236,3 +235,5 @@ tmp/
 temp/
 
 # End of https://www.gitignore.io/api/node
+
+./bin
