Update 'Apple Distribution International Ltd.' (community contribution)

--- a/companies/apple.json
+++ b/companies/apple.json
@@ -1,21 +1,37 @@
 {
     "slug": "apple",
+    "relevant-countries": [
+        "all"
+    ],
     "categories": [
         "commerce",
         "entertainment",
-        "social media",
         "telecommunication"
     ],
-    "name": "Apple Distribution International",
+    "name": "Apple Distribution International Ltd.",
     "address": "Hollyhill Industrial Estate\nHollyhill, Cork\nIreland",
     "email": "contactus.de@euro.apple.com",
     "web": "https://www.apple.com",
     "sources": [
         "https://www.apple.com/legal/privacy/de-ww/",
-        "https://www.apple.com/de/contact/"
+        "https://www.apple.com/legal/privacy/en-ww/",
+        "https://www.apple.com/de/contact/",
+        "https://github.com/datenanfragen/data/pull/1491"
     ],
-    "relevant-countries": [
-        "all"
+    "required-elements": [
+        {
+            "desc": "Name",
+            "type": "name",
+            "optional": false
+        },
+        {
+            "desc": "Email",
+            "type": "email",
+            "optional": false
+        }
+    ],
+    "comments": [
+        "You can view and download your information in the Privacy Portal at: https://privacy.apple.com/\n\nYou can also contact them via the following web forms:\nEnglish: https://www.apple.com/privacy/contact/\nGerman: https://www.apple.com/de/privacy/contact/\nSpanish: https://www.apple.com/es/privacy/contact/\nFrench: https://www.apple.com/fr/privacy/contact/\n"
     ],
     "quality": "verified"
 }
