--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     },
     "devDependencies": {
         "@babel/runtime": "^7.11.0",
+        "@segment/ajv-human-errors": "^2.0.0",
         "@types/all-the-cities": "^3.1.0",
         "@types/glob": "^7.1.4",
+        "@types/marked-terminal": "^3.1.2",
         "@types/node": "^14.14.20",
         "@typescript-eslint/eslint-plugin": "^4.12.0",
         "@typescript-eslint/parser": "^4.12.0",
-        "ajv": "^6.10.2",
+        "ajv": "^8.6.3",
+        "ajv-formats": "^2.1.1",
+        "ajv-formats-draft2019": "^1.6.1",
         "all-the-cities": "^3.1.0",
+        "as-table": "^1.0.55",
         "babel-eslint": "^10.1.0",
         "bent": "^7.3.9",
         "chunk": "^0.0.2",
@@ -21,17 +26,24 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-json": "^3.1.0",
         "eslint-plugin-optimize-regex": "^1.2.1",
+        "filter-anything": "^2.2.1",
         "glob": "^7.1.6",
         "husky": "^4.3.7",
+        "json-source-map": "^0.6.1",
+        "jsonpointer": "^4.1.0",
         "lint-staged": "^10.5.3",
+        "marked": "^3.0.7",
+        "marked-terminal": "^4.2.0",
+        "picocolors": "^1.0.0",
         "prettier": "^2.2.1",
         "quicktype": "^15.0.260",
         "ts-node": "^10.2.1",
+        "type-fest": "^2.5.1",
         "typescript": "^4.4.3",
         "typesense": "^0.6.1"
     },
     "scripts": {
-        "test": "eslint --ext .json --ext .js --ext .ts && ts-node-transpile-only src/test-records.ts # this order allows useful hints for invalid files",
+        "test": "eslint --ext .json --ext .js --ext .ts && ts-node-transpile-only src/test-records.ts",
         "deploy": "node deploy-typesense.js"
     },
     "husky": {
