--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ajv-formats": "^2.1.1",
         "ajv-formats-draft2019": "^1.6.1",
         "all-the-cities": "^3.1.0",
+        "arg": "^5.0.1",
         "as-table": "^1.0.55",
         "babel-eslint": "^10.1.0",
         "bent": "^7.3.9",
