I am only using github.dev for this PR so far, so I need the CI to compile TS :) Will probably reverse this later-on. But we should consider compiling TS in CI as well.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "typesense": "^0.6.1"
     },
     "scripts": {
-        "test": "eslint --ext .json --ext .js --ext .ts && ts-node-transpile-only src/test-records.ts",
+        "test": "eslint --ext .json --ext .js --ext .ts && ts-node src/test-records.ts",
         "deploy": "node deploy-typesense.js"
     },
     "husky": {
